k8s/app/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scm2-service
  namespace: default
spec:
  type: NodePort
  selector:
    app: scm2
  ports:
    - port: 80
      targetPort: 8081
      nodePort: 30007
